# skillsaw

./: .agentlint.yaml  .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-hooks.yaml  .skillsaw-badge.json  .skillsaw.yaml  .skillsaw.yaml.example  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  REVIEW.md  THREAT_MODEL.md  TODO.md  action.yml  apm.yml  codecov.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server.json
.agents/skills/skillsaw-ecosystem-scout/: SKILL.md
.agents/skills/skillsaw-issue-review/: SKILL.md
.agents/skills/skillsaw-lint/: SKILL.md
.apm/hooks/: pre-commit.json  pre-commit.sh  pre-push.json  pre-push.sh
.apm/instructions/: architecture.instructions.md  development.instructions.md  development.md  new-linter-rules.instructions.md  python.instructions.md  testing.instructions.md
.apm/prompts/: bump-version.prompt.md  development-guidelines.prompt.md
.claude/: README.md  apm-hooks.json  hooks.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: bump-version.md  development-guidelines.md  test-ai-helpers.md
.claude/rules/: architecture.md  bad-rule.txt  development.md  new-linter-rules.md  oops.txt  python.md  testing.md
.claude/skills/: skillsaw-create-plugin  skillsaw-fix  skillsaw-onboard
.codex/: hooks.json
.cursor/: hooks.json
.cursor/rules/: development.mdc  new-linter-rules.mdc  python.mdc  testing.mdc
.gemini/: settings.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/hooks/: skillsaw-hooks.json  skillsaw-pre-commit.json  skillsaw-pre-push.json
.github/instructions/: development.instructions.md  new-linter-rules.instructions.md
.github/prompts/: test-ai-helpers.prompt.md
.github/workflows/: README.md  codeql.yml  docker.yml  issue-triage.lock.yml  issue-triage.md  pages.yml  release.yml  rule-impact.yml  security-scan.yml  self-lint.yml  skillsaw-ecosystem-scout.yml  skillsaw-issue-solver.yml  skillsaw-maintenance.yml  skillsaw-pr-review.yml  skillsaw-review-panel.yml  test-action-review.yml  test-action.yml  test-llm-integration.yml  test-promptfoo-compat.yml  test.yml
action/: review.py
benchmarks/: __init__.py  bench.py  genrepo.py
docs/: CNAME  autofixing.md  baseline.md  ci.md  claude-code-hook.md  cli.md  configuration.md  custom-rules.md  ecosystem-survey-2026-05-13.md  editor-integration.md  getting-started.md  index.md  lint-tree.md  mcp-server.md  other-coding-agents.md  plugins.md  pre-commit.md  repo-types.md  research.md  scaffolding.md  supply-chain-protection.md  validation-report.md
docs/designs/: content-rules-research.md  docs-command.md  lint-tree.md  llm-autofix-engine.md  output-formats.md  promptfoo-evals.md
docs/rules/: agent-frontmatter-values.md  agent-frontmatter.md  agents.md  agentskill-description-length.md  agentskill-description.md  agentskill-evals-required.md  agentskill-evals.md  agentskill-name.md  agentskill-rename-refs.md  agentskill-structure.md  agentskill-unreferenced-files.md  agentskill-valid.md  agentskills.md  apm-structure-valid.md  apm-yaml-valid.md  apm.md  coderabbit-schema-valid.md  coderabbit-yaml-valid.md  coderabbit.md  command-format.md  command-frontmatter.md  command-name-format.md  command-naming.md  command-sections.md  content-actionability-score.md  content-banned-references.md  content-broken-internal-reference.md  content-cognitive-chunks.md  content-contradiction.md  content-critical-position.md  content-embedded-secrets.md  content-emphasis-density.md  content-hook-candidate.md  content-inconsistent-terminology.md  content-instruction-budget.md  content-instruction-drift.md  content-intelligence.md  content-missing-stop-condition.md  content-negative-only.md  content-placeholder-text.md  (+44 more)
docs/stylesheets/: custom.css
examples/plugins/skillsaw-example-plugin/: README.md  pyproject.toml
examples/plugins/skillsaw-example-plugin/src/skillsaw_example_plugin/: __init__.py  cli.py  extensions.py  rules.py
examples/plugins/skillsaw-example-plugin/tests/: test_extensions.py  test_rules.py
examples/plugins/skillsaw-example-plugin/tests/fixture/: ACME.md  CLAUDE.md
examples/plugins/skillsaw-example-plugin/tests/fixture/.acme/: config.json
examples/plugins/skillsaw-example-plugin/tests/fixture/.acme/rules/: style.md
hooks/: hooks.json  post-tool-use.sh
requirements/: dev-lock.txt  llm-lock.txt  lock.txt
review/: action.yml
scripts/: bump-version.sh  changed-rules.py  generate-docs.py  generate-site-content.py  move-floating-tag.sh  rule-impact-report.py  verify-apm.sh
skills/skillsaw-create-plugin/: SKILL.md
skills/skillsaw-fix/: SKILL.md
skills/skillsaw-onboard/: SKILL.md
src/agentlint/: __init__.py  __main__.py  config.py  linter.py  rule.py
src/claudelint/: __init__.py  __main__.py  config.py  context.py
src/skillsaw/: __init__.py  __main__.py  baseline.py  budget.py  bundles.py  card.py  config.py  context.py  git_baseline.py  grade.py  lint_target.py  lint_tree.py  linter.py  markdown_doc.py  mcp_server.py  plugins.py  rule.py  rule_docs.py  suppression.py  tui.py  utils.py  version.py
tests/: __init__.py  conftest.py  test_action_review.py  test_agent_rules.py  test_agents_md_rules.py  test_agentskill_rules.py  test_apm_rules.py  test_autofix.py  test_baseline.py  test_benchmark.py  test_budget.py  test_bundles.py  test_card.py  test_claude_deep_rules.py  test_claudelint_compat.py  test_coderabbit_rules.py  test_color.py  test_config.py  test_content_analysis.py  test_content_rules.py  test_context.py  test_context_budget_rules.py  test_copilot_deep_rules.py  test_copilot_instruction_rules.py  test_cursor_rules.py  test_custom_rules.py  test_docs.py  test_explain.py  test_formatters.py  test_gemini_rules.py  test_git_baseline.py  test_grade.py  test_hook.py  test_hook_rules.py  test_instruction_file_rules.py  test_integration.py  test_integration_plugins.py  test_json_null_handling.py  test_kiro_rules.py  test_lint_since.py  (+31 more)
(+817 files in other folders)
